# konsepy

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml  requirements-sas.txt
.github/workflows/: publish-to-pypi.yml
example/wksp/: chapters_to_corpus.py  corpus.jsonl
src/konsepy/: __init__.py  bio_tag.py  bio_tag_corpus.py  bio_tag_sentence.py  cli.py  constants.py  corpus2jsonl.py  create_bio_dataset.py  engine.py  get_text_snippets.py  importer.py  main.py  predict_bio_dataset.py  regex.py  results.py  run4snippets.py  run_all.py  run_all_matches.py  rxsearch.py  rxutils.py  testutils.py  textio.py  train_on_bio_dataset.py  types.py
src/konsepy/context/: contexts.py  negation.py  other_subject.py
test/: build.ps1  conftest.py  test_contexts.py  test_create_bio_dataset.py  test_e2e_cli.py  test_e2e_dupes.py  test_extraction_results.py  test_negation.py  test_optional_deps.py  test_other_subject.py  test_predict_bio_dataset.py  test_run4snippets.py  test_run_all_matches.py  test_rxsearch.py  test_rxutils.py  test_sqlite_source.py  test_train_predict_e2e.py
test/example_nlp/concepts/: jealousy.py  justice.py  revenge.py
test/misc_nlp/concepts/: date.py  dupe_names.py  score_extract.py
