[project]
name = 'konsepy'
dynamic = ['version', 'description']
authors = [
    { name = 'dcronkite', email = 'dcronkite+pypi@gmail.com' },
]
readme = 'README.md'
dependencies = [
    'loguru'
]
requires-python = '>=3.10'
keywords = [
    'nlp',
]
classifiers = [# https://pypi.org/classifiers/
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Text Processing :: Linguistic',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Healthcare Industry',
]

[project.urls]
Home = 'https://github.com/kpwhri/konsepy'

[dependency-groups]
dev = [
    'pytest',
    'pytest-loguru',
]
ssplit = ['spacy']
sas = ['sas7bdat']
model = ['datasets', 'transformers']
all = ['konsepy[sas,model]']

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-q"
pythonpath = 'src'

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
