[project]
name = 'konsepy'
version = '0.3.2'
description = 'Framework for build NLP information extraction systems using regular expressions.'
authors = [
    { name = 'dcronkite', email = 'dcronkite+pypi@gmail.com' },
]
readme = 'README.md'
dependencies = [
    'loguru>=0.7.0'
]
requires-python = '>=3.10'
keywords = [
    'nlp',
]
classifiers = [# https://pypi.org/classifiers/
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Text Processing :: Linguistic',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Healthcare Industry',
]

[project.urls]
Home = 'https://github.com/kpwhri/konsepy'

[project.optional-dependencies]
dev = [
    'pytest>=9.0.0',
]
ssplit = [
    'spacy'
]
sas = [
    'sas7bdat'
]
model = [
    'datasets',
    'transformers',
]
all = [
    'sas',
    'model',
]

[dependency-groups]
dev = [
    'pytest>=9.0.0',
]
ssplit = [
    'spacy'
]
sas = [
    'sas7bdat'
]
model = [
    'datasets',
    'transformers',
]
all = [
    'sas',
    'model',
]

[project.scripts]
konsepy = 'konsepy.main:main'

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-q"
pythonpath = 'src'

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
